[package]
name = "hyper_microservice"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.3.2"}
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.1"
hyper = "0.12"
lazy_static = "1.4.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
regex = "1.8.1"
slab = "0.4.8"
# hyper = { version = "0.14.26", features =["full"]}
# tokio = { version = "1.27.0", features = ["full"] }
